[package]
name = "nvisy-ollama"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
publish = { workspace = true }

description = "Ollama client library for nvisy"
keywords = ["ollama", "llm", "ai", "client"]
categories = ["api-bindings", "web-programming::http-client"]

[features]
default = []

# CLI configuration support: enables clap derives for config types
# This allows config types to be used with command-line argument parsing
config = ["dep:clap"]

[dependencies]
# Internal crates
nvisy-core = { workspace = true }

# Ollama client
ollama-rs = { version = "0.3", features = ["default"] }

# Async runtime
tokio = { workspace = true, features = ["time", "rt"] }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Derive macros
derive_builder = { workspace = true }

# Observability
tracing = { workspace = true }

# Data types
uuid = { workspace = true }
bytes = { workspace = true }
jiff = { workspace = true }
base64 = { workspace = true }

# CLI (optional)
clap = { workspace = true, features = ["derive", "env"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
