# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "nvisy-olmocr2"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

[dependencies]
# HTTP client for OCR API requests
reqwest = { workspace = true, features = ["json", "multipart", "stream"] }

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
futures = { workspace = true, features = [] }

# Observability
tracing = { workspace = true, features = [] }

# (De)serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [] }

# Error handling
thiserror = { workspace = true, features = [] }
derive_more = { workspace = true, features = ["deref", "deref_mut", "from", "into"] }
derive_builder = { workspace = true }
anyhow = { workspace = true, features = [] }

# Data types
uuid = { workspace = true, features = ["serde", "v4", "v7"] }
jiff = { workspace = true, features = ["serde"] }
bytes = { workspace = true, features = [] }
url = { workspace = true, features = [] }
mime = { workspace = true, features = [] }

# Base64 encoding for image data
base64 = { workspace = true, features = [] }

# Date and time handling
chrono = { workspace = true, features = ["serde"] }
