# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "nvisy-opendal"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Internal crates
nvisy-data = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["rt", "sync", "io-util"] }
futures = { workspace = true, features = [] }

# Storage
opendal = { workspace = true, features = [
    "services-s3",
    "services-gcs",
    "services-azblob",
    "services-gdrive",
    "services-dropbox",
    "services-onedrive",
] }

# Observability
tracing = { workspace = true, features = [] }

# (De)serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [] }

# Derive macros & utilities
async-trait = { workspace = true, features = [] }
bytes = { workspace = true, features = [] }

# Data types
jiff = { workspace = true, features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
