# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "nvisy-portkey"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
utoipa = ["dep:utoipa"]

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["time"] }

# AI/OpenAI services
openrouter-rs = { workspace = true, features = [] }
governor = { workspace = true, features = [] }

# Derive macros & utilities
thiserror = { workspace = true, features = [] }
derive_builder = { workspace = true, features = [] }
strum = { workspace = true, features = ["derive"] }

# (De)serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [] }
serde_toon = { workspace = true, features = [] }
schemars = { workspace = true, features = ["derive"] }

# Text processing
regex = { workspace = true, features = [] }

# Observability
tracing = { workspace = true, features = [] }
uuid = { workspace = true, features = ["v4", "serde"] }

# OpenAPI documentation (optional)
utoipa = { workspace = true, features = [], optional = true }
