# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "nvisy-postgres"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

[dependencies]
# Async runtime
tokio = { workspace = true, features = [] }
futures = { workspace = true, features = [] }

# ORM & Database
diesel = { workspace = true, features = ["postgres", "time", "uuid", "ipnet-address", "serde_json", "numeric", "64-column-tables"] }
diesel_migrations = { workspace = true, features = ["postgres"] }
diesel-async = { workspace = true, features = ["postgres", "pool", "deadpool", "async-connection-wrapper"] }
diesel-derive-enum = { workspace = true, features = ["postgres"] }
deadpool = { workspace = true, features = ["rt_tokio_1"] }

# Observability
tracing = { workspace = true, features = [] }

# (De)serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [] }

# Derive macros & utilities
thiserror = { workspace = true, features = [] }
strum = { workspace = true, features = ["derive"] }

# Data types
time = { workspace = true, features = ["serde", "formatting", "parsing"] }
uuid = { workspace = true, features = ["serde", "v4", "v7"] }
ipnet = { workspace = true, features = ["serde"] }
bigdecimal = { workspace = true, features = ["serde"] }
