# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "nvisy-postgres"
description = "Type-safe PostgreSQL database layer for the Nvisy platform with async connection pooling"
readme = "./README.md"
keywords = ["postgres", "database", "orm", "diesel", "async"]
categories = ["database", "development-tools"]

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Default feature set (none for minimal dependencies)
default = []

# JSON Schema support: enables JsonSchema derives on Postgres types
# This allows Postgres types to be used directly in API documentation without
# manual schema implementations, while keeping the dependency optional
schema = ["dep:schemars"]

# CLI configuration support: enables clap derives for config types
# This allows config types to be used with command-line argument parsing
config = ["dep:clap"]

[dependencies]
# Async runtime
tokio = { workspace = true, features = [] }
futures = { workspace = true, features = [] }

# ORM & Database
diesel = { workspace = true, features = ["postgres", "uuid", "ipnet-address", "serde_json", "numeric", "64-column-tables"] }
diesel_migrations = { workspace = true, features = ["postgres"] }
diesel-async = { workspace = true, features = ["postgres", "pool", "deadpool", "async-connection-wrapper"] }
diesel-derive-enum = { workspace = true, features = ["postgres"] }
deadpool = { workspace = true, features = ["rt_tokio_1"] }
pgvector = { workspace = true, features = ["diesel"] }
pgtrgm = { workspace = true, features = ["diesel"] }

# Observability
tracing = { workspace = true, features = [] }

# (De)serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [] }

# Derive macros & utilities
thiserror = { workspace = true, features = [] }
strum = { workspace = true, features = ["derive"] }
derive_more = { workspace = true, features = ["deref", "deref_mut"] }

# Data types
jiff = { workspace = true, features = ["serde"] }
jiff-diesel = { workspace = true, features = ["postgres"] }
uuid = { workspace = true, features = ["serde", "v4", "v7"] }
ipnet = { workspace = true, features = ["serde"] }
bigdecimal = { workspace = true, features = ["serde"] }
base64 = { workspace = true, features = [] }

# OpenAPI documentation (optional)
schemars = { workspace = true, features = [], optional = true }

# CLI (optional)
clap = { workspace = true, features = ["derive", "env"], optional = true }
