# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "nvisy-qdrant"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Default feature set (none for minimal dependencies)
default = []

# JSON Schema support: enables JsonSchema derives on Qdrant types
# This allows Qdrant types to be used directly in API documentation without
# manual schema implementations, while keeping the dependency optional
schema = ["dep:schemars"]

# CLI configuration support: enables clap derives for config types
# This allows config types to be used with command-line argument parsing
config = ["dep:clap"]

[dependencies]
# Vector database client
qdrant-client = { workspace = true, features = [] }

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
futures = { workspace = true, features = [] }
async-stream = { workspace = true, features = [] }

# Observability
tracing = { workspace = true, features = [] }

# (De)serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [] }

# Error handling
thiserror = { workspace = true, features = [] }
derive_more = { workspace = true, features = ["deref", "deref_mut", "from", "into", "display"] }

# Data types
uuid = { workspace = true, features = ["serde", "v4", "v7"] }
jiff = { workspace = true, features = ["serde"] }
bytes = { workspace = true, features = [] }

# OpenAPI documentation (optional)
schemars = { workspace = true, features = [], optional = true }

# CLI (optional)
clap = { workspace = true, features = ["derive", "env"], optional = true }
