# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "nvisy-server"
description = "High-performance HTTP API server for the Nvisy document redaction platform"
readme = "./README.md"
keywords = ["http", "server", "api", "web", "axum"]
categories = ["web-programming::http-server"]

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Default feature set (none for minimal dependencies)
default = []

# CLI configuration support: enables clap derives for config types
# This allows config types to be used with command-line argument parsing
config = [
    "dep:clap",
    "nvisy-nats/config",
    "nvisy-postgres/config",
]

[dependencies]
# Internal crates
nvisy-nats = { workspace = true, features = ["schema"] }
nvisy-postgres = { workspace = true, features = ["schema"] }
nvisy-webhook = { workspace = true, features = ["schema"] }

# Async runtime
tokio = { workspace = true, features = [] }
tokio-util = { workspace = true, features = [] }
tokio-stream = { workspace = true, features = [] }
futures = { workspace = true, features = [] }
async-trait = { workspace = true, features = [] }

# HTTP & Web server
axum = { workspace = true, features = ["http2", "macros", "multipart"] }
axum-client-ip = { workspace = true, features = [] }
axum-extra = { workspace = true, features = ["typed-header", "attachment", "query"] }
tower = { workspace = true, features = [] }
tower-http = { workspace = true, features = [] }

# OpenAPI/Documentation
aide = { workspace = true, features = ["axum", "axum-query", "axum-form", "axum-json", "axum-multipart", "axum-extra", "bytes", "http"] }
schemars = { workspace = true, features = [] }

# Observability
tracing = { workspace = true, features = [] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Authentication & Security
jsonwebtoken = { workspace = true, features = [] }
argon2 = { workspace = true, features = [] }
rand = { workspace = true, features = [] }
base64 = { workspace = true, features = [] }
sha2 = { workspace = true, features = [] }

# Encryption
chacha20poly1305 = { workspace = true, features = [] }
hkdf = { workspace = true, features = [] }

# (De)serialization and Validation
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [] }
validator = { workspace = true, features = [] }

# Text processing
regex = { workspace = true, features = [] }
woothee = { workspace = true, features = [] }

# Derive macros & utilities
thiserror = { workspace = true, features = [] }
derive_more = { workspace = true, features = ["full"] }
strum = { workspace = true, features = ["derive"] }

# Data types
uuid = { workspace = true, features = ["serde", "v4", "v7"] }
jiff = { workspace = true, features = ["serde"] }
ipnet = { workspace = true, features = ["serde"] }
bigdecimal = { workspace = true, features = ["serde"] }
zxcvbn = { workspace = true, features = [] }
url = { workspace = true, features = [] }

# Error handling
anyhow = { workspace = true, features = [] }

# CLI (optional)
clap = { workspace = true, features = ["derive", "env"], optional = true }

[dev-dependencies]
# Internal crates
nvisy-nats = { workspace = true, features = ["config"] }
nvisy-postgres = { workspace = true, features = ["config"] }
nvisy-webhook = { workspace = true, features = ["reqwest"] }

clap = { workspace = true, features = ["derive", "env"] }
axum-test = { workspace = true, features = [] }
anyhow = { workspace = true, features = ["backtrace"] }
tempfile = { workspace = true, features = [] }
dotenvy = { workspace = true, features = [] }
