# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "nvisy-server"
description = "High-performance HTTP API server for the Nvisy document redaction platform"
readme = "./README.md"
keywords = ["http", "server", "api", "web", "axum"]
categories = ["web-programming::http-server"]

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Default feature set (none for minimal dependencies)
default = []

[dependencies]
# Internal crates
nvisy-core = { workspace = true, features = ["schema"] }
nvisy-nats = { workspace = true, features = ["schema"] }
nvisy-postgres = { workspace = true, features = ["schema"] }
nvisy-webhook = { workspace = true, features = ["schema"] }

# Async runtime
tokio = { workspace = true, features = [] }
tokio-util = { workspace = true, features = [] }
tokio-stream = { workspace = true, features = [] }
futures = { workspace = true, features = [] }
async-trait = { workspace = true, features = [] }

# HTTP server & middleware
axum = { workspace = true, features = ["http2", "macros", "multipart"] }
axum-client-ip = { workspace = true, features = [] }
axum-extra = { workspace = true, features = ["typed-header", "attachment", "query"] }
tower = { workspace = true, features = [] }
tower-http = { workspace = true, features = [] }

# OpenAPI/Documentation
aide = { workspace = true, features = ["axum", "axum-query", "axum-form", "axum-json", "axum-multipart", "axum-extra", "bytes", "http"] }
schemars = { workspace = true, features = [] }

# Observability
tracing = { workspace = true, features = [] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Authentication
jsonwebtoken = { workspace = true, features = [] }
argon2 = { workspace = true, features = [] }
zxcvbn = { workspace = true, features = [] }
sha2 = { workspace = true, features = [] }

# Encryption & Cryptography
chacha20poly1305 = { workspace = true, features = [] }
hkdf = { workspace = true, features = [] }

# Encoding
base64 = { workspace = true, features = [] }

# Randomness
rand = { workspace = true, features = [] }

# (De)serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [] }
validator = { workspace = true, features = [] }

# Derive macros & utilities
thiserror = { workspace = true, features = [] }
derive_more = { workspace = true, features = ["full"] }
strum = { workspace = true, features = ["derive"] }
anyhow = { workspace = true, features = [] }

# Primitive datatypes
uuid = { workspace = true, features = ["serde", "v4", "v7"] }
jiff = { workspace = true, features = ["serde"] }
ipnet = { workspace = true, features = ["serde"] }
bigdecimal = { workspace = true, features = ["serde"] }

# Domain datatypes & data structures
url = { workspace = true, features = [] }

# Text processing
regex = { workspace = true, features = [] }
woothee = { workspace = true, features = [] }

[dev-dependencies]
# Internal crates
nvisy-nats = { workspace = true, features = ["schema"] }
nvisy-postgres = { workspace = true, features = ["schema"] }
nvisy-webhook = { workspace = true, features = ["reqwest"] }

axum-test = { workspace = true, features = [] }
anyhow = { workspace = true, features = ["backtrace"] }
tempfile = { workspace = true, features = [] }
dotenvy = { workspace = true, features = [] }
