# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "nvisy-service"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Default feature set (none for minimal dependencies)
default = []

# JSON Schema support: enables JsonSchema derives on core types
# This allows core types to be used directly in API documentation without
# manual schema implementations, while keeping the dependency optional
schema = ["dep:schemars"]

# Test utilities: enables mock providers for testing
# Use this in dev-dependencies to get access to mock AI services
test-utils = []

# CLI configuration support: enables clap derives for config types
# This allows config types to be used with command-line argument parsing
config = ["dep:clap"]

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["macros", "time", "sync"] }
futures-util = { workspace = true, features = [] }
async-trait = { workspace = true, features = [] }

# Macros and utilities
thiserror = { workspace = true, features = [] }
derive_more = { workspace = true, features = ["from", "into"] }

# Observability
tracing = { workspace = true, features = [] }

# (De)serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [] }
base64 = { workspace = true, features = [] }

# OpenAPI documentation (optional)
schemars = { workspace = true, features = [], optional = true }

# Commonly used datatypes
uuid = { workspace = true, features = ["serde", "v4", "v7"] }
jiff = { workspace = true, features = ["serde"] }
bytes = { workspace = true, features = ["serde"] }
url = { workspace = true, features = ["serde"] }

# CLI (optional)
clap = { workspace = true, features = ["derive", "env"], optional = true }
