# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "nvisy-test"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Default feature set (none for minimal dependencies)
default = []

# CLI configuration support: enables clap derives for config types
# This allows config types to be used with command-line argument parsing
config = ["dep:clap"]

[dependencies]
# Internal crates
nvisy-core = { workspace = true, features = [] }

# Async runtime
futures = { workspace = true, features = [] }
async-trait = { workspace = true, features = [] }

# (De)serialization
serde = { workspace = true, features = ["derive"] }

# Time handling
jiff = { workspace = true, features = [] }

# CLI (optional)
clap = { workspace = true, features = ["derive", "env"], optional = true }
