# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "nvisy-vector"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Internal crates
nvisy-core = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["rt", "sync"] }
futures = { workspace = true, features = [] }

# HTTP client (for REST-based backends)
reqwest = { workspace = true, features = ["json"] }

# Observability
tracing = { workspace = true, features = [] }

# (De)serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [] }

# Derive macros & utilities
thiserror = { workspace = true, features = [] }
derive_more = { workspace = true, features = ["debug", "display", "from", "into"] }
async-trait = { workspace = true, features = [] }

# Vector store clients
qdrant-client = "1.13"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
